--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 @import "le-salon";
 @import "contact";
 @import "process";
+@import "projects";
 
 @import url('https://fonts.googleapis.com/css?family=Didact+Gothic|Lato|Raleway+Dots|Raleway:100,400,700');
 
