--- a/src/scss/_projects.scss
+++ b/src/scss/_projects.scss
@@ -26,9 +26,10 @@
       color: black;
       font-size: 80px;
       position: relative;
-      left: 300px;
+      left: 45%;
       top: 300px;
       z-index: 2;
+      text-shadow: 2px 2px 2px rgba(234, 234, 234, 1);
     }
 
     p{
