--- a/src/scss/_projects.scss
+++ b/src/scss/_projects.scss
@@ -1,6 +1,6 @@
 #projects{
   .container{
-    margin-top: 70px;
+    margin-top: 100px;
     display: flex;
     justify-content: center;
   }
@@ -12,14 +12,14 @@
       // margin: 100px 20px 0 10px;
       padding: 70px;
     }
-    // .col-sm-9{
-    //   display: flex;
-    //   justify-content: space-around;
-    //   position: absolute;
-    // }
+    .col-sm-9{
+      display: flex;
+      justify-content: space-around;
+      // position: absolute;
+    }
     img{
-      width: 95%;
-      height: 800px;
+      width: 100%;
+      height: 650px;
       object-fit: cover;
     }
     h2{
