--- a/src/scss/_projects.scss
+++ b/src/scss/_projects.scss
@@ -29,7 +29,7 @@
       left: 45%;
       top: 300px;
       z-index: 2;
-      text-shadow: 1px 1px 1px rgba(234, 234, 234, .6);
+      // text-shadow: 1px 1px 1px rgba(234, 234, 234, .6);
     }
 
     p{
