--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -1,24 +1,41 @@
 #contact{
   height: auto;
   width: 100%;
+  color: white;
+  h2{
+    font-size: 70px;
+    text-transform: capitalize;
+  }
+  a{
+    font-size: 40px;
+    color: black;
+  }
   .contact__heading{
-    background: steelBlue;
-    height: 300px;
+    background: rgba(42,190,175,1);
+    background: -moz-linear-gradient(top, rgba(42,190,175,1) 0%, rgba(171,217,212,1) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(42,190,175,1)), color-stop(100%, rgba(171,217,212,1)));
+    background: -webkit-linear-gradient(top, rgba(42,190,175,1) 0%, rgba(171,217,212,1) 100%);
+    background: -o-linear-gradient(top, rgba(42,190,175,1) 0%, rgba(171,217,212,1) 100%);
+    background: -ms-linear-gradient(top, rgba(42,190,175,1) 0%, rgba(171,217,212,1) 100%);
+    background: linear-gradient(to bottom, rgba(42,190,175,1) 0%, rgba(171,217,212,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2abeaf', endColorstr='#abd9d4', GradientType=0 );
+    width: 100%;
+    height: 365px;
+    height: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
   }
-  .contact__heading{
-    background: steelBlue;
-    height: 300px;
-  }
   .contact__email{
     @extend .contact__heading;
-    background-color: orange;
+    background: white;
   }
   .contact__twitter{
-    @extend .contact__heading;
-    background-color: red;
+    @extend .contact__email;
+  }
+  p{
+    text-align: center;
+    color: black;
   }
 }
