--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,3 @@
-@import "variables";
 @import "navbar";
 @import "home";
 @import "about";
@@ -8,6 +7,7 @@
 @import "contact";
 @import "process";
 @import "projects";
+@import "footer";
 
 @import url('https://fonts.googleapis.com/css?family=Didact+Gothic|Lato|Raleway+Dots|Raleway:100,400,700');
 
